# SentinelGuard

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  simulate_attacks.ps1  test_lib.rs
agent/: Cargo.toml  README.md  build.rs  test_ort.rs
agent/build_out/: .rustc_info.json
agent/build_out/debug/.fingerprint/unicode-ident-95763af6c287fce8/: lib-unicode_ident
agent/build_out/release/: sentinelguard_agent.d
agent/build_out/release/.fingerprint/ahash-634bbf63b3807b9b/: build-script-build-script-build
agent/build_out/release/.fingerprint/ahash-9917191ded3c53c6/: run-build-script-build-script-build  run-build-script-build-script-build.json
agent/build_out/release/.fingerprint/ahash-ac6e141bf1b543c0/: lib-ahash  lib-ahash.json
agent/build_out/release/.fingerprint/anyhow-24ce006173ac6577/: run-build-script-build-script-build
agent/build_out/release/.fingerprint/anyhow-2890e51f0d9d0be0/: build-script-build-script-build.json
agent/build_out/release/.fingerprint/anyhow-99adce4244bf8189/: lib-anyhow  lib-anyhow.json
agent/build_out/release/.fingerprint/anyhow-a83e9f749854b37e/: run-build-script-build-script-build
agent/build_out/release/.fingerprint/anyhow-b5b5e55e1adceaea/: lib-anyhow.json
agent/build_out/release/.fingerprint/async-stream-def3aa1f0b6ae919/: lib-async_stream  lib-async_stream.json
agent/build_out/release/.fingerprint/async-stream-impl-6333437155e5d1a2/: lib-async_stream_impl.json
agent/build_out/release/.fingerprint/async-trait-fd60c7d2bce2e92c/: lib-async_trait.json
agent/build_out/release/.fingerprint/autocfg-b45c198b5ab52ab8/: lib-autocfg  lib-autocfg.json
agent/build_out/release/.fingerprint/axum-85b9e6661708099a/: build-script-build-script-build.json
agent/build_out/release/.fingerprint/axum-core-78e1ab8d1713526b/: run-build-script-build-script-build
agent/build_out/release/.fingerprint/axum-core-8461b044bbb1ba04/: build-script-build-script-build  build-script-build-script-build.json
agent/build_out/release/.fingerprint/axum-core-997d747401b51e13/: lib-axum_core  lib-axum_core.json
agent/build_out/release/.fingerprint/axum-ef07b2538334d54e/: run-build-script-build-script-build
agent/build_out/release/.fingerprint/base64-215bde086a71f988/: lib-base64.json
agent/build_out/release/.fingerprint/base64-3439e7136d9b78f9/: lib-base64  lib-base64.json
agent/build_out/release/.fingerprint/byteorder-4d4a8f5eef65a93a/: lib-byteorder.json
agent/build_out/release/.fingerprint/bytes-6bdb74f7e2ca0a90/: lib-bytes.json
agent/build_out/release/.fingerprint/bytes-a80e7a11fe984870/: lib-bytes
agent/build_out/release/.fingerprint/cfg-if-26a1aa146816b7c1/: lib-cfg_if
agent/build_out/release/.fingerprint/chrono-9fd736efb754df39/: lib-chrono.json
agent/build_out/release/.fingerprint/cpufeatures-02899f2a8568d1df/: lib-cpufeatures
agent/build_out/release/.fingerprint/crossbeam-channel-b558e0854ac3f986/: lib-crossbeam_channel
agent/build_out/release/.fingerprint/crossbeam-utils-0ae1e406c4957693/: run-build-script-build-script-build.json
agent/build_out/release/.fingerprint/crossbeam-utils-d95158763a96e23b/: build-script-build-script-build  build-script-build-script-build.json
agent/build_out/release/.fingerprint/crypto-common-5773cfa2ba545063/: lib-crypto_common
agent/build_out/release/.fingerprint/der-1972f976d175cf76/: lib-der
agent/build_out/release/.fingerprint/deranged-77cbf4e1fd8692a3/: lib-deranged.json
agent/build_out/release/.fingerprint/digest-962f0d8064c4afc9/: lib-digest
agent/build_out/release/.fingerprint/equivalent-ec66809f93d06824/: lib-equivalent.json
agent/build_out/release/.fingerprint/equivalent-efbce0cc30e9b2d8/: lib-equivalent.json
agent/build_out/release/.fingerprint/fallible-streaming-iterator-86bc3389af568bf0/: lib-fallible_streaming_iterator.json
agent/build_out/release/.fingerprint/fastrand-5aaf0e1bb0f98ee8/: lib-fastrand  lib-fastrand.json
agent/build_out/release/.fingerprint/find-msvc-tools-685a11cfc6df775d/: lib-find_msvc_tools  lib-find_msvc_tools.json
agent/build_out/release/.fingerprint/fixedbitset-06800eee3f865498/: lib-fixedbitset  lib-fixedbitset.json
agent/build_out/release/.fingerprint/futures-channel-4b0540f5ba1628cb/: lib-futures_channel.json
agent/build_out/release/.fingerprint/futures-core-5d32edb32c8daa53/: lib-futures_core.json
agent/build_out/release/.fingerprint/futures-sink-bd672f6822332143/: lib-futures_sink.json
agent/build_out/release/.fingerprint/futures-task-1eeab3d823dcc8f7/: lib-futures_task
agent/build_out/release/.fingerprint/generic-array-8d7bd69374aa9e9f/: build-script-build-script-build  build-script-build-script-build.json
agent/build_out/release/.fingerprint/getrandom-5e15b4e9cd3d535b/: lib-getrandom
agent/build_out/release/.fingerprint/getrandom-6c8edddbffa50d81/: lib-getrandom
agent/build_out/release/.fingerprint/getrandom-ab7836e9bb7d7cb2/: run-build-script-build-script-build.json
agent/build_out/release/.fingerprint/h2-b99e46f78f2c02da/: lib-h2.json
agent/build_out/release/.fingerprint/hashbrown-20f4e3439473626f/: lib-hashbrown
agent/build_out/release/.fingerprint/hashbrown-5e30d0a9e4ba8164/: lib-hashbrown
agent/build_out/release/.fingerprint/http-6cec210cd8d2872a/: lib-http  (+1 more)
agent/config/: config.toml
agent/proto/: sentinelguard.proto
agent/src/: communication.rs  config.rs  correlation.rs  database.rs  events.rs  grpc_server.rs  inference.rs  lib.rs  main.rs  quarantine.rs  security.rs  service.rs  telemetry.rs
agent/src/detectors/: entropy.rs  extension_explosion.rs  file_extension.rs  mass_rename_delete.rs  mass_write.rs  mod.rs  process_behavior.rs  ransom_note.rs  shadow_copy.rs
agent/tests/: integration_test.rs  unit_test.rs
kernel/: CMakeLists.txt  Communication.c  Communication.h  ETW.c  ETW.h  Events.c  Events.h  README.md  SentinelGuard.c  SentinelGuard.h  SentinelGuard.inf  sentinelguard.cat
quarantine/: CMakeLists.txt  README.md  process_control.cpp  process_control.h  quarantine.cpp  quarantine.h
quarantine_helper/: CMakeLists.txt
quarantine_helper/src/: main.cpp
(+272 files in other folders)
