[package]
name = "sentinelguard-agent"
version = "1.0.0"
edition = "2021"
authors = ["SentinelGuard Team"]
description = "SentinelGuard User-Mode Agent"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Services",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yara = "0.11"
ort = { version = "2.0", features = ["load_library", "ndarray"] }
ring = "0.17"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
toml = "0.8"
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
ndarray = "0.15"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "sentinelguard-agent"
path = "src/main.rs"

