[package]
name = "sentinelguard-agent"
version = "1.0.0"
edition = "2021"
description = "SentinelGuard ransomware detection user-mode agent"
license = "Proprietary"

[[bin]]
name = "sentinelguard_agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# ONNX inference
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
ndarray = "0.15"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Windows APIs
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
